update the schedule

--- a/attend/index.html
+++ b/attend/index.html
@@ -756,7 +756,7 @@
   
     <div class="article-style"><h2 id="ready-to-join-us-for-the-summer-school-on-biomedical-imaging-with-deep-learning-in-tunis">Ready to join us for the Summer School on Biomedical Imaging with Deep Learning in Tunis!</h2>
 <h2 id="registration-stay-tuned">Registration (Stay Tuned)</h2>
-<p><strong>Register</strong> now to secure your spot and provide us with essential information. Click <a href="">here</a> to access the registration form.</p>
+<p><strong>Register</strong> now to secure your spot and provide us with essential information. Click <a href="https://forms.gle/wkG53PUPQ7K4zLK3A" target="_blank" rel="noopener">here</a> to access the registration form.</p>
 <h2 id="accommodation">Accommodation</h2>
 <h3 id="recommended-hotels-for-our-invited-speakersguests----near-ciffip-tunis-r7x74xc-tunis">Recommended Hotels for our invited Speakers/Guests &ndash; near CIFFIP Tunis (R7X7+4XC, Tunis)</h3>
 <ul>
