--- a/schedule/index.html
+++ b/schedule/index.html
@@ -744,7 +744,7 @@
   <h1>Schedule (Tentative)</h1>
 
   
-  <p class="page-subtitle">13-17 September in Cairo, Egypt</p>
+  <p class="page-subtitle">1-5 September in Tunis, Tunisia</p>
   
 
   
@@ -754,307 +754,7 @@
 
 <div class="universal-wrapper">
   
-    <div class="article-style"><p>Time: All times correspond to Egypt Local time</p>
-<table>
-<thead>
-<tr>
-<th><strong>Day</strong></th>
-<th><strong>Time</strong></th>
-<th><strong>Session</strong></th>
-<th><strong>Speaker</strong></th>
-<th><strong>Location</strong></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>Day 1: Saturday, 13th Sep. 2025</strong></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>14:00</td>
-<td>Check-in</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td><strong>Day 2: Sunday, 14th Sep. 2025</strong></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>08:00</td>
-<td>Registration</td>
-<td><a href="https://saai2024.github.io/people/" target="_blank" rel="noopener">Tutors</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>08:30</td>
-<td>Welcome Note  (UniBonn + GUC)</td>
-<td><a href="/authors/shadi-albarqouni">Prof. Dr. Shadi Albarqouni</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>09:00</td>
-<td>ML Overview</td>
-<td><a href="/authors/shadi-albarqouni">Prof. Dr. Shadi Albarqouni</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>10:00</td>
-<td>Coffee Break</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>10:30</td>
-<td>Invited Talk #1</td>
-<td>TBC</td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>11:00</td>
-<td>Invited Talk #2</td>
-<td>TBC</td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>11:30</td>
-<td>Invited Talk #3</td>
-<td>TBC</td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>12:00</td>
-<td>Group Photo</td>
-<td>All</td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>12:00</td>
-<td>Lunch Break</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>13:30</td>
-<td>Simple &amp; Multivariate Linear Regression</td>
-<td>TBC</td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>15:00</td>
-<td>Coffee Break</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>15:30</td>
-<td><em>Practical Session (Linear Regression)</em></td>
-<td><a href="https://saai2024.github.io/people/" target="_blank" rel="noopener">Tutors</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>20:00</td>
-<td>Welcome Dinner</td>
-<td>TBC</td>
-<td></td>
-</tr>
-<tr>
-<td><strong>Day 3: Monday, 15th Sep. 2025</strong></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>08:30</td>
-<td>Logistic Regression</td>
-<td><a href="/authors/elodie-germani">Dr. Elodie Germani</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>10:00</td>
-<td>Coffee Break</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>10:30</td>
-<td><em>Practical Session (Classification)</em></td>
-<td><a href="https://saai2024.github.io/people/" target="_blank" rel="noopener">Tutors</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>12:00</td>
-<td>Lunch Break</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>13:00</td>
-<td>AI and Bioinformatics in Rare Diseases: Opportunities and Challenges</td>
-<td><a href="/authors/sally-ibrahim">Dr. Sally Ibrahim</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>13:15</td>
-<td>Revolutionizing Early Detection of Skin Cancer</td>
-<td><a href="/authors/shereen-afifi">Dr. Shereen Afifi</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>13:30</td>
-<td>(Convolutional) Neural Networks (C)NNs</td>
-<td><a href="/authors/shereen-afifi">Dr. Shereen Afifi</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>15:00</td>
-<td>Coffee Break</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>15:30</td>
-<td><em>Practical Session (CNNs)</em></td>
-<td><a href="https://saai2024.github.io/people/" target="_blank" rel="noopener">Tutors</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>18:00</td>
-<td>Light Dinner</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td><strong>Day 4: Tuesday, 16th Sep. 2025</strong></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>08:30</td>
-<td>Clustering &amp; Dimensionality Reduction</td>
-<td><a href="/authors/elodie-germani">Dr. Elodie Germani</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>10:00</td>
-<td>Coffee Break</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>10:30</td>
-<td><em>Practical Session (Clustering)</em></td>
-<td><a href="https://saai2024.github.io/people/" target="_blank" rel="noopener">Tutors</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>12:00</td>
-<td>Lunch Break</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>13:00</td>
-<td>AI-Driven Sensing Elements for Advanced Control in Mechatronics and Robotics</td>
-<td><a href="/authors/amir-r.-ali">Dr. Amir Roushdy</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>13:15</td>
-<td>Bias in Computational Medical Imaging</td>
-<td><a href="/authors/elodie-germani">Dr. Elodie Germani</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>13:30</td>
-<td><em>Practical session on Affordable AI in Healthcare</em></td>
-<td><a href="https://saai2024.github.io/people/" target="_blank" rel="noopener">Tutors</a></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>15:00</td>
-<td>Social Event</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>18:00</td>
-<td>Group Photo</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>20:00</td>
-<td>Farewell Dinner</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td><strong>Day 5: Wednesday, 17th Sep. 2025</strong></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>10:00</td>
-<td>Check-out</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td>11:00</td>
-<td>Social Event (Optional and self-organized by the participants)</td>
-<td></td>
-<td></td>
-</tr>
-</tbody>
-</table>
+    <div class="article-style"><p>Time: All times correspond to Tunisian Local time</p>
 </div>
   
 
