--- a/index.html
+++ b/index.html
@@ -1750,7 +1750,7 @@ Over five intensive days in Tunis, you will explore cutting-edge deep-learning t
     style="flex: 0 0 200px; text-align: center;"
   >
     <img
-      src="https://github.com/bild2025/bild2025.github.io/blob/main/logos/DPU_logo_PNG_White.png?raw=true"
+      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsvxXD4rUl4s6otmZqB_SMLu9o4N1bMDVMnw&s"
       alt="Duhok Polytechnic University"
       style="
         height: 80px;
