--- a/index.html
+++ b/index.html
@@ -1719,7 +1719,7 @@ Over five intensive days in Tunis, you will explore cutting-edge deep-learning t
         width: auto;
         max-width: 100%;
         vertical-align: middle;
-        margin: 0 3rem;
+        margin: 0 5rem;
       "
     />
   </a>
@@ -1738,7 +1738,7 @@ Over five intensive days in Tunis, you will explore cutting-edge deep-learning t
         width: auto;
         max-width: 100%;
         vertical-align: middle;
-        margin: 0 1rem;
+        margin: 0 4rem;
       "
     />
   </a>
@@ -1750,14 +1750,14 @@ Over five intensive days in Tunis, you will explore cutting-edge deep-learning t
     style="flex: 0 0 200px; text-align: center;"
   >
     <img
-      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsvxXD4rUl4s6otmZqB_SMLu9o4N1bMDVMnw&s"
+      src="https://github.com/bild2025/bild2025.github.io/blob/main/logos/DPU_logo_PNG_White.png?raw=true"
       alt="Duhok Polytechnic University"
       style="
         height: 80px;
         width: auto;
         max-width: 100%;
         vertical-align: middle;
-        margin: 0 0rem;
+        margin: 0 4rem;
       "
     />
   </a>
