--- a/attend/index.html
+++ b/attend/index.html
@@ -758,38 +758,28 @@
 <h2 id="registration-stay-tuned">Registration (Stay Tuned)</h2>
 <p><strong>Register</strong> now to secure your spot and provide us with essential information. Click <a href="https://forms.gle/wkG53PUPQ7K4zLK3A" target="_blank" rel="noopener">here</a> to access the registration form.</p>
 <h2 id="accommodation">Accommodation</h2>
-<h3 id="recommended-hotels-for-our-invited-speakersguests----near-ciffip-tunis-r7x74xc-tunis">Recommended Hotels for our invited Speakers/Guests &ndash; near CIFFIP Tunis (R7X7+4XC, Tunis)</h3>
+<h3 id="the-accommodtion-will-be-arranged-for-our-invited-speakersguests">The Accommodtion will be arranged for our invited Speakers/Guests.</h3>
 <ul>
-<li>
-<p><strong><a href="https://all.accor.com/hotel/A9E9/index.en.shtml" target="_blank" rel="noopener">Novotel Tunis Lac</a></strong><br>
-Family-friendly hotel featuring spacious rooms, conference spaces, and leisure facilities.</p>
-</li>
-<li>
-<p><strong><a href="https://movenpick.accor.com/en/africa/tunisia/tunis/hotel-du-lac-tunis.html" target="_blank" rel="noopener">Mövenpick Hotel du Lac Tunis</a></strong><br>
-A four-star hotel on the lakefront offering modern amenities, meeting rooms, and shuttle services.</p>
-</li>
-<li>
-<p><strong>Short-Term Rentals (Airbnb, Booking.com)</strong><br>
-Explore apartments and guesthouses in Berges du Lac for flexible, economical stays.</p>
-</li>
+<li><strong>Short-Term Rentals (Airbnb, Booking.com)</strong><br>
+Explore apartments and guesthouses in Berges du Lac for flexible, economical stays.</li>
 </ul>
 <h2 id="venue">Venue</h2>
-<p>The <strong>Summer School on Medical Imaging with Deep Learning</strong> will take place at the <strong><a href="https://www.ciffip.tn/" target="_blank" rel="noopener">Centre International de Formation et de Perfectionnement Professionnel (CIFFIP)</a></strong> in Tunis.</p>
-<p><strong>Address:</strong> <a href="https://maps.app.goo.gl/KRCLpKkqbVGrf1DH7" target="_blank" rel="noopener">R7X7+4XC, Tunis, Tunisia</a><br>
-CIFFIP offers modern lecture halls, hands-on labs, and collaborative spaces ideal for our hands-on sessions.</p>
+<p>The <strong>Summer School on Medical Imaging with Deep Learning</strong> will take place at the <strong><a href="https://el-mechtel.goldentulip.com/en-us/?sr=SEO_GOOGLE#The%20Hotel" target="_blank" rel="noopener">GOLDEN TULIP EL MECHTEL</a></strong> in Tunis.</p>
+<p><strong>Address:</strong> <a href="https://maps.app.goo.gl/asyd6AV1C7S7FkVW6" target="_blank" rel="noopener">Tunis, Tunisia</a><br>
+The GOLDEN TULIP EL MECHTEL offers modern lecture halls, hands-on labs, and collaborative spaces ideal for our hands-on sessions.</p>
 <h2 id="location-and-transportation">Location and Transportation</h2>
 <ul>
 <li>
-<p><strong>From Tunis–Carthage International Airport to CIFFIP:</strong></p>
+<p><strong>From Tunis–Carthage International Airport to GOLDEN TULIP EL MECHTEL:</strong></p>
 <ul>
-<li>Approx. 10 km / 15 minutes by car.</li>
+<li>Approx. 8 km / 15 minutes by car.</li>
 <li>Taxis and ride-hailing services (Bolt, Uber) are readily available at the airport.</li>
 </ul>
 </li>
 <li>
 <p><strong>Local Transportation in Tunis:</strong></p>
 <ul>
-<li><strong>Taxis &amp; Ride-Hailing:</strong> Convenient for door-to-door service, e.g., 10km (20 mins) by car to the city center around the Tunis Clock Tower, and 15km (20 mins) by car to reach the University of Tunis El Manar Campus.</li>
+<li><strong>Taxis &amp; Ride-Hailing:</strong> Convenient for door-to-door service, e.g., 3.5km (10 mins) by car to the city center around the Tunis Clock Tower, and 5km (10 mins) by car to reach the University of Tunis El Manar Campus.</li>
 </ul>
 </li>
 </ul>
