--- a/faq/index.html
+++ b/faq/index.html
@@ -757,9 +757,9 @@ from <strong>Germany, Tunisia, Lebanon, and Iraq</strong>, with preference given
 </ul>
 <p><strong>2. How many participants will attend, and how are they distributed?</strong></p>
 <ul>
-<li><strong>Answer:</strong> We will host around <strong>50 students</strong> in total:
+<li><strong>Answer:</strong> We will host around <strong>40 students</strong> in total:
 <ul>
-<li>around <strong>40</strong> from Tunisia</li>
+<li>around <strong>32</strong> from Tunisia</li>
 <li><strong>8</strong> from Germany, Lebanon, and Iraq</li>
 </ul>
 </li>
@@ -829,7 +829,7 @@ from <strong>Germany, Tunisia, Lebanon, and Iraq</strong>, with preference given
 <ul>
 <li><strong>Answer:</strong>
 <ul>
-<li><strong>Venue:</strong> Centre International de Formation et de Perfectionnement Professionnel (CIFFIP), R7X7+4XC, Tunis, Tunisia</li>
+<li><strong>Venue:</strong> <a href="https://el-mechtel.goldentulip.com/en-us/?sr=SEO_GOOGLE#The%20Hotel" target="_blank" rel="noopener">GOLDEN TULIP EL MECHTEL</a>, Tunis, Tunisia</li>
 <li><strong>Dates:</strong> 1-5 September 2025</li>
 </ul>
 </li>
@@ -838,7 +838,7 @@ from <strong>Germany, Tunisia, Lebanon, and Iraq</strong>, with preference given
 <ul>
 <li><strong>Answer:</strong>
 <ul>
-<li><strong>From Tunis-Carthage Airport:</strong> ~20 min by taxi or ride-hail</li>
+<li><strong>From Tunis-Carthage Airport:</strong> ~15 min by taxi</li>
 </ul>
 </li>
 </ul>
