--- a/attend/index.html
+++ b/attend/index.html
@@ -756,7 +756,7 @@
   
     <div class="article-style"><h2 id="ready-to-join-us-for-the-summer-school-on-biomedical-imaging-with-deep-learning-in-tunis">Ready to join us for the Summer School on Biomedical Imaging with Deep Learning in Tunis!</h2>
 <h2 id="registration-stay-tuned">Registration (Stay Tuned)</h2>
-<p><strong>Register</strong> now to secure your spot and provide us with essential information. Click <a href="https://forms.gle/wkG53PUPQ7K4zLK3A" target="_blank" rel="noopener">here</a> to access the registration form.</p>
+<p><strong>Register</strong> now to secure your spot and provide us with essential information. Click <a href="https://forms.gle/ZkqCToV86z5mJhvg9" target="_blank" rel="noopener">here</a> to access the registration form.</p>
 <h2 id="accommodation">Accommodation</h2>
 <h3 id="the-accommodtion-will-be-arranged-for-our-invited-speakersguests">The Accommodtion will be arranged for our invited Speakers/Guests.</h3>
 <ul>
