--- a/attend/index.html
+++ b/attend/index.html
@@ -758,7 +758,7 @@
 <h2 id="registration-stay-tuned">Registration (Stay Tuned)</h2>
 <p><strong>Register</strong> now to secure your spot and provide us with essential information. Click <a href="https://forms.gle/ZkqCToV86z5mJhvg9" target="_blank" rel="noopener">here</a> to access the registration form.</p>
 <h2 id="accommodation">Accommodation</h2>
-<h3 id="the-accommodtion-will-be-arranged-for-our-invited-speakersguests">The Accommodtion will be arranged for our invited Speakers/Guests.</h3>
+<h3 id="the-accommodation-will-be-arranged-for-our-invited-speakersguests">The Accommodation will be arranged for our invited Speakers/Guests.</h3>
 <ul>
 <li><strong>Short-Term Rentals (Airbnb, Booking.com)</strong><br>
 Explore apartments and guesthouses in Berges du Lac for flexible, economical stays.</li>
