--- a/faq/index.html
+++ b/faq/index.html
@@ -799,7 +799,7 @@ from <strong>Germany, Tunisia, Lebanon, and Iraq</strong>, with preference given
 </ul>
 <p><strong>6. Will there be preparatory materials or tutorials?</strong></p>
 <ul>
-<li><strong>Answer:</strong> It depends on the knowlwdge and background of the selected participants. We may procide:
+<li><strong>Answer:</strong> It depends on the knowledge and background of the selected participants. We may provide:
 <ul>
 <li>Pre-readings on Python &amp; deep-learning fundamentals</li>
 <li>Jupyter notebooks to practice before the school begins</li>
