--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: June 27, 2025 --><html lang="en-us" >
+<!-- Last Published: June 28, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -1003,7 +1003,7 @@
 
 
   <div class="col-12">
-    BILD 2025 is organized under the umbrella of the <a href="https://albarqouni.github.io/funded/sanad/" target="_blank" rel="noopener">Strategic Arab-German Network for Affordable and Democratized AI in Healthcare (SANAD)</a>, uniting academic excellence and technological innovation across borders. This year’s edition is organized by the <a href="https://albarqouni.github.io/" target="_blank" rel="noopener">Albarqouni Lab</a> at the <a href="https://www.ukbonn.de/" target="_blank" rel="noopener">University Hospital Bonn</a> and the <a href="https://www.uni-bonn.de/en" target="_blank" rel="noopener">University of Bonn</a>. We are proud to partner with leading institutions in the region—<a href="https://www.lau.edu.lb/" target="_blank" rel="noopener">Lebanese American University</a>, <a href="https://www.utm.rnu.tn/?lang=en" target="_blank" rel="noopener">University of Tunis El Manar</a>, and <a href="https://www.dpu.edu.krd/en/" target="_blank" rel="noopener">Duhok Polytechnic University</a> — to deliver a truly international learning experience.
+    BILD 2025 is organized under the umbrella of the <a href="https://albarqouni.github.io/funded/sanad/" target="_blank" rel="noopener">Strategic Arab-German Network for Affordable and Democratized AI in Healthcare (SANAD)</a>, uniting academic excellence and technological innovation across borders. This year’s edition is organized by the <a href="https://albarqouni.github.io/" target="_blank" rel="noopener">Albarqouni Lab</a> at the <a href="https://www.ukbonn.de/" target="_blank" rel="noopener">University Hospital Bonn</a> and the <a href="https://www.uni-bonn.de/en" target="_blank" rel="noopener">University of Bonn</a>. We are proud to partner with leading institutions in the region—<a href="https://www.lau.edu.lb/" target="_blank" rel="noopener">Lebanese American University</a>, <a href="https://www.utm.rnu.tn/?lang=en" target="_blank" rel="noopener">University of Tunis El Manar</a>, and <a href="https://dpu.edu.krd/" target="_blank" rel="noopener">Duhok Polytechnic University</a> — to deliver a truly international learning experience.
 Over five intensive days in Tunis, you will explore cutting-edge deep-learning techniques for medical imaging through expert lectures, hands-on labs, and collaborative case studies. Engage with peers and faculty from Germany, Lebanon, Iraq, and Tunisia as you develop practical skills in building and deploying AI models for real-world healthcare challenges. We look forward to an inspiring week of interdisciplinary exchange and the shared commitment to advancing affordable, life-saving AI in medicine.
   </div>
 
@@ -1744,7 +1744,7 @@ Over five intensive days in Tunis, you will explore cutting-edge deep-learning t
   </a>
   <!-- DPU -->
   <a
-    href="https://www.dpu.edu.krd/en/"
+    href="https://dpu.edu.krd/"
     target="_blank"
     rel="noopener"
     style="flex: 0 0 200px; text-align: center;"
