--- a/schedule/index.html
+++ b/schedule/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: June 28, 2025 --><html lang="en-us" >
+<!-- Last Published: June 29, 2025 --><html lang="en-us" >
 
 
 <head>
@@ -755,6 +755,7 @@
 <div class="universal-wrapper">
   
     <div class="article-style"><p>Time: All times correspond to Tunisian Local time</p>
+<div style="width: 100%;"><div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe title="BILD" frameborder="0" width="1200" height="675" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genially.com/685b9a0f0b15adee61f8298a" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div>
 </div>
   
 
