--- a/attend/index.html
+++ b/attend/index.html
@@ -755,7 +755,7 @@
 <div class="universal-wrapper">
   
     <div class="article-style"><h2 id="ready-to-join-us-for-the-summer-school-on-biomedical-imaging-with-deep-learning-in-tunis">Ready to join us for the Summer School on Biomedical Imaging with Deep Learning in Tunis!</h2>
-<h2 id="registration-stay-tuned">Registration (Stay Tuned)</h2>
+<h2 id="registration-closed">Registration (Closed)</h2>
 <p><strong>Register</strong> now to secure your spot and provide us with essential information. Click <a href="https://forms.gle/ZkqCToV86z5mJhvg9" target="_blank" rel="noopener">here</a> to access the registration form.</p>
 <h2 id="accommodation">Accommodation</h2>
 <h3 id="the-accommodation-will-be-arranged-for-our-invited-speakersguests">The Accommodation will be arranged for our invited Speakers/Guests.</h3>
