update the speakers and program

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -312,7 +312,7 @@
 <meta property="twitter:image" content="https://bild2025.github.io/media/icon_huf993396291df84e6ed44d36e8e19226e_3225560_512x512_fill_lanczos_center_3.png" />
 <meta property="og:site_name" content="BILD" />
 <meta property="og:url" content="https://bild2025.github.io/schedule/" />
-<meta property="og:title" content="Schedule (Tentative) | BILD" />
+<meta property="og:title" content="Schedule | BILD" />
 <meta property="og:description" content="Summer School" /><meta property="og:image" content="https://bild2025.github.io/media/icon_huf993396291df84e6ed44d36e8e19226e_3225560_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
 
   
@@ -339,7 +339,7 @@
 
 
   
-  <title>Schedule (Tentative) | BILD</title>
+  <title>Schedule | BILD</title>
 
   
   
@@ -741,7 +741,7 @@
     
   
 <div class="universal-wrapper pt-3">
-  <h1>Schedule (Tentative)</h1>
+  <h1>Schedule</h1>
 
   
   <p class="page-subtitle">1-5 September in Tunis, Tunisia</p>
